force-app/main/default/objects/Netsuite_Integration__c/Netsuite_Integration__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Parameters used for Netsuite RESTlet callout</description>
    <label>Netsuite Integration</label>
</CustomObject>