force-app/main/default/objects/Netsuite_Integration__c/fields/Account_RESTlet_Params__c.field-meta.xml
<CustomField>
    <fullName>Account_RESTlet_Params__c</fullName>
    <label>Account RESTlet Params</label>
    <length>100</length>
    <type>Text</type>
</CustomField>