force-app/main/default/objects/Netsuite_Integration__c/fields/Contract_RESTlet_Params__c.field-meta.xml
<CustomField>
    <fullName>Contract_RESTlet_Params__c</fullName>
    <label>Contract RESTlet Params</label>
    <length>100</length>
    <type>Text</type>
</CustomField>