force-app/main/default/objects/Netsuite_Integration__c/fields/Email_Recipient__c.field-meta.xml
<CustomField>
    <fullName>Email_Recipient__c</fullName>
    <description>Email address(es) that will receive an email if an error occurred on Netsuite - Account &amp; Contact Integration</description>
    <label>Email Recipient</label>
    <length>255</length>
    <type>Text</type>
</CustomField>