force-app/main/default/objects/Netsuite_Integration__c/fields/nlauth_account__c.field-meta.xml
<CustomField>
    <fullName>nlauth_account__c</fullName>
    <label>nlauth_account</label>
    <length>25</length>
    <type>Text</type>
</CustomField>