force-app/main/default/objects/Netsuite_Integration__c/fields/nlauth_email__c.field-meta.xml
<CustomField>
    <fullName>nlauth_email__c</fullName>
    <label>nlauth_email</label>
    <length>50</length>
    <type>Text</type>
</CustomField>