force-app/main/default/objects/Netsuite_Integration__c/fields/nlauth_signature__c.field-meta.xml
<CustomField>
    <fullName>nlauth_signature__c</fullName>
    <label>nlauth_signature</label>
    <length>25</length>
    <type>Text</type>
</CustomField>